--- a/coloring/templates/coloring/index.html
+++ b/coloring/templates/coloring/index.html
@@ -17,6 +17,11 @@
 <body>
   <canvas id="myCanvas" width="750px" height="750px"></canvas>
   <div id="color-palette"></div>
+  
+  <a href = "/coloring/paint_palette"><button type="button">
+    palette
+  </button></a>
+  
 </body>
 
 </html>
