--- a/coloring/templates/coloring/paint_palette.html
+++ b/coloring/templates/coloring/paint_palette.html
@@ -8,12 +8,14 @@
   <meta name="viewport" http-equiv="Content-Type" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Paint Palette</title>
 
+  <script type="text/javascript" src="{% static 'coloring/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
+
   <!-- Bootstrap, jQuery, Paper.js -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+<!--   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
@@ -27,13 +29,24 @@
   <script type="text/javascript" src="{% static 'coloring/js/paintPalette.js' %}"></script>
   <!-- TODO: Get this to work -->
   <link rel="shortcut icon" type="image/ico" href="{% static 'coloring/images/paint_palette.ico' %}"/>
-
+ 
 </head>
 
+
 <body>
+  
+  <canvas id="palette-canvas" resize></canvas>
+  <div  id="color-palette"></div>
+  <button type="button" id="erasor" onclick = "erase()">erase</button>
+  <a href = "/coloring/"><button type="button" id="color" onclick = "startcolor()">
+    start coloring
+  </button></a>
+  
+  
+<!--   </div>
   <div class="row">
     <div class="col-3">
-      lolwut is dis
+      
     </div>
     <div class="col-8">
       <div class="row">
@@ -43,13 +56,12 @@
           <button type="button" id="btn-redo" class="btn btn-primary rotate-pi">↩️</button>
         </div>
       </div>
-      <div class="row">
-        <canvas id="palette-canvas" resize></canvas>
+      <div class="row" style="height: 400px;">
+        <canvas id="palette-canvas"></canvas>
       </div>
 
     </div>
     <div class="col-1">
-      <!-- TODO: Utilise a for loop here -->
       <button type="button" class="btn btn-primary">Red</button>
       <button type="button" class="btn btn-primary">Blue</button>
       <button type="button" class="btn btn-primary">Yellow</button>
@@ -60,7 +72,6 @@
       <button type="button" class="btn btn-primary">Red</button>
       <button type="button" class="btn btn-primary">Blue</button>
     </div>
-  </div>
+  </div> -->
 </body>
-
 </html>
